force-bridge/ckb-testnet/michi-ckb-testnet-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: michi-ckb-testnet
  namespace: michi
spec:
  selector:
    matchLabels:
      app: michi-ckb-testnet
  serviceName: "ckb-testnet"
  replicas: 1
  template:
    metadata:
      labels:
        app: michi-ckb-testnet
        logging: "true"
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - name: michi-ckb-testnet
        image: "nervos/perkins-tent:v0.43.2"
        ports:
          - name: rpc
            containerPort: 9115
            protocol: "TCP"
        volumeMounts:
          - name: michi-ckb-data
            mountPath: /data
            subPath: michi-ckb-testnet
      volumes:
      - name: michi-ckb-data
        persistentVolumeClaim:
          claimName: michi-ckb-testnet-pvc
