force-bridge/ckb-testnet/michi-ckb-testnet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: michi-ckb-testnet-svc
  namespace: michi
  labels:
    app: michi-ckb-testnet-svc
spec:
  ports:
  - name: rpc
    port: 8114
    targetPort: 9115
    protocol: TCP
  type: ClusterIP
  selector:
    app: michi-ckb-testnet
