force-bridge/ckb-testnet/michi-ckb-testnet-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: michi
  annotations:
    kubernetes.io/ingress.class: "nginx"
    
  name: ingress-michi-ckb-testnet
spec:
  rules:
  - host: testnet-rpc.forcebridge.com
    http:
      paths:
      - path: /
        backend:
          serviceName: michi-ckb-testnet-svc
          servicePort: 8114
